--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <script src="https://unpkg.com/vue@2.5.13/dist/vue.js"></script>
     <link rel="stylesheet" type="text/css" href="css/game.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
-
+    <link rel="icon" type="image/png" sizes="16x16" href="res/favicon.png">
 
 </head>
 <body>
