added link to repo

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
 
 
     <div id="footer">
-        <p>Copyright &copy; Anonymouse | <a href="https://github.com/ChaitanyaMittal27" target="_blank">GitHub</a></p>
+        <p>Copyright &copy; Anonymouse | <a href="https://github.com/ChaitanyaMittal27" target="_blank">GitHub</a> | <a href="https://github.com/ChaitanyaMittal27/TomAndJerryMazeGame-.git" target="_blank">GitHub Repository</a></p>
     </div>
 
 <!--Load controlling code development -->
